Fixed line spacing issue, finished header and nav elements.
Next: embedding the video

--- a/styles.css
+++ b/styles.css
@@ -3,9 +3,11 @@ main {
   padding: 15px;
 }
 #header {
-  margin: 10%;
+  margin: 5%;
   font-family: 'Bevan', serif;
   font-size: 42px;
+  text-align: center;
+  line-height: 1.3em;
 }
 #header-img {
   display: block;
@@ -18,9 +20,15 @@ main {
   font-size: 30px;
 }
 #nav-bar {
-
+  background: #8e443d;
+  font-size: 30px;
+  line-height: 1em;
+  padding: 10px;
 }
 .nav-link {
-  font-family: sans-serif;
-  font-size: 20px;
+  color: #cb9173;
+  /*background: #511730; use this color for hover animation*/
+  padding: 5px;
+  font-family: 'Nanum Gothic', sans-serif;
+  font-size: 18px;
 }
